<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30" />

                <Button
                    android:id="@+id/color_btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorAccent"
                    android:text="@string/classic" />

                <Button
                    android:id="@+id/color_btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorGreat"
                    android:text="@string/great" />

                <Button
                    android:id="@+id/color_btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorUltra"
                    android:text="@string/ultra" />

                <Button
                    android:id="@+id/color_btn_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorMaster"
                    android:text="@string/master" />

                <Button
                    android:id="@+id/color_btn_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorPremiere"
                    android:text="@string/premiere" />

                <Button
                    android:id="@+id/color_btn_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorHeavy"
                    android:text="@string/heavy" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9937503802638876/1405322766"></com.google.android.gms.ads.AdView>
</RelativeLayout>